Bug 134009 - Multiple delete frame style undo actions after paste
Summary: Multiple delete frame style undo actions after paste
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.1.0 target:7.0.0.1 target:6.4.6
Keywords: bibisected, bisected
: 134010 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-15 18:24 UTC by Telesto
Modified: 2020-07-13 13:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-06-15 18:24:46 UTC
Description:
Multiple delete frame style undo actions for a single paste operation

Steps to Reproduce:
1. Open attachment 97742 [details] (bug 77519)
2. CTRL+A
3. CTRL+C
4. CTRL+N
5. CTRL+V
6. Take a look at the number of undo actions

Actual Results:
11 undo actions

Expected Results:
1 undo action


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: a35c18aeff3b1d8f270db7e094850fb8ba1ab84a
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

not in
Version: 6.4.0.0.beta1+ (x64)
Build ID: 20be5cd0bdc57d812bf34a2debfe48caa51de881
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2020-06-15 18:31:41 UTC
See also bug 134010 for undo steps at file open (appears to be older)
Comment 2 Attila Baraksó (NISZ) 2020-06-16 08:23:44 UTC
Reproduced in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 33a720ab802491f15b247e09755cd36205b6f435
CPU szálak: 4; OS: Windows 10.0 Build 17134; Felületmegjelenítés: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 3 Attila Baraksó (NISZ) 2020-06-16 14:34:58 UTC
Bibisected using bibisect-win64-7.0 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=166b5010b402a41b192b1659093a25acf9065fd9
author: Michael Stahl <Michael.Stahl@cib.de>
committer: Michael Stahl <michael.stahl@cib.de>
summary: tdf#130685 sw_redlinehide: fix copying to position following redline
Comment 4 Attila Baraksó (NISZ) 2020-06-16 14:36:57 UTC
Adding CC: Michael Stahl
Comment 5 Telesto 2020-06-16 15:28:18 UTC
@M. Stahl
Not sure if it's in the same area, else you could do bug 134010 in one run
Comment 6 Michael Stahl 2020-06-18 07:39:00 UTC
this is not a regression, the spurious undo objects are created whenever a column frame is destroyed.

see bug 103359 for same problem when column frame is created.

fixed on master
Comment 7 Michael Stahl 2020-06-18 07:40:06 UTC
*** Bug 134010 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2020-06-18 07:40:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/102a99e46bca9fb292cc1b2e7604020eb9ca43f4

tdf#134009 sw: prevent spurious undos in SwColumnFrame::DestroyImpl()

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2020-06-18 09:48:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/3a65558c07e0848a23297cbfc75fe1906e92f5d7

tdf#134009 sw: prevent spurious undos in SwColumnFrame::DestroyImpl()

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2020-06-19 23:26:25 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/5a53c9262a3c7623b7d29e8afe46fddcbea003d3

tdf#134009 sw: prevent spurious undos in SwColumnFrame::DestroyImpl()

It will be available in 6.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Attila Baraksó (NISZ) 2020-07-13 13:32:03 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: ffe503b62f9a508285ed06ef977f91604130579a
CPU szálak: 4; OS: Windows 10.0 Build 17134; Felületmegjelenítés: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

@Michael: Thanks for fixing this issue!