tdf#134009 sw: prevent spurious undos in SwColumnFrame::DestroyImpl()

SwUndoFrameFormatDelete is created for every destroyed column frame.

Change-Id: I11e0399487a41c52768175faf3a3699b302ad317
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96558
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>
(cherry picked from commit 102a99e46bca9fb292cc1b2e7604020eb9ca43f4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96576
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit 5a53c9262a3c7623b7d29e8afe46fddcbea003d3)